# learnbevy

./: .gitignore  404.html  CREDITS.md  LICENSE-MIT  README.md  config.toml  devenv.nix  devenv.yaml  index.html  index.js  index.xml  linkmap  sitemap.xml  style.css
.github/: dependabot.yml
bevy_compile_api/: .gitignore  Cargo.toml  upload.bat
bevy_compile_api/compile_instance/: BaseCargo.toml
bevy_compile_api/compile_instances/: build_images.js
bevy_compile_api/compile_instances/v0.10/: BaseCargo.toml  build.sh  nightly.Dockerfile  stable.Dockerfile
bevy_compile_api/compile_instances/v0.11/: BaseCargo.toml  config.toml  nightly.Dockerfile  stable.Dockerfile
bevy_compile_api/compile_instances/v0.12/: BaseCargo.toml  Dockerfile  nightly.Dockerfile
bevy_compile_api/compile_instances/v0.13/: nightly.Dockerfile  stable.Dockerfile
bevy_compile_api/src/: cache.rs  compile.rs  config.rs  extra.js  ip_lock.rs  logging.rs  main.rs  rate_limit.rs  versions.rs
bevy_compile_worker/: .gitignore  package-lock.json  package.json  tsconfig.json  wrangler.toml
bevy_compiler_worker/: .gitignore  Cargo.toml  wrangler.toml
bevy_compiler_worker/src/: lib.rs
bevy_playground/: 404.html  index.html  index.js  style.css
categories/: index.html  index.xml
compile_api/: Cargo.toml  default.nix
compile_api/compile_instance/: BaseCargo.toml  Dockerfile  build.sh
compile_api/metrics_testing/: README.md  docker-compose.yml  example-dashboard.json  prometheus.yml
compile_api/src/: cache.rs  compile.rs  config.rs  extra.js  ip_lock.rs  logging.rs  main.rs  metrics.rs  rate_limiting.rs
compile_api_2/: .gitignore  Cargo.toml
compile_api_2/src/: main.rs
compile_server_os/: configuration.nix  flake.nix
compile_worker/: .prettierrc  package-lock.json  package.json  tsconfig.json  wrangler.toml
content/: _index.md
dev_scripts/: diff.js  test.js
extra_app_code/: Cargo.toml
extra_app_code/src/: brp.rs  lib.rs
server/: .gitignore  Cargo.toml  default.nix  flake.nix
server/src/: clippy.rs  compile.rs  format.rs  health.rs  instances.rs  lint.rs  main.rs
shared/: Cargo.toml
shared/src/: lib.rs
tools/check_crate_updates/: Cargo.toml
tools/check_crate_updates/src/: main.rs  manifest.rs
www/: .dockerignore  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  Cargo.toml  Dioxus.toml  Dockerfile  README.md  components.json  deno.json  fly.toml  input.css  next.config.js  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  tailwind.config.js  wrangler.toml
www/app/: layout.tsx  page.tsx
www/app/playground/: client-playground.tsx  create-share.ts  page.tsx  version-picker.tsx
www/assets/: favicon.ico.br  header.svg.br  main.css.br  tailwind.css.br
www/components/: basic-tooltip.tsx  code-editor.tsx  combobox.tsx  console.tsx
www/lib/: channels.ts  constants.ts  runCode.ts  rustMonacoDef.ts  versions.ts
www/src/: app.d.ts  app.pcss  main.rs  monaco-config.js  monaco.rs  play.rs  playground.rs  run.js
www/src/components/: button.rs  card.rs  code_editor.rs  console.rs  dynamic_layout.rs  mod.rs
www/src/lib/: channels.ts  default-code.ts  disqualified.ts  format.ts  monaco.ts  play.ts  rust-monaco.ts  shares.ts  utils.ts  versions.ts
www/src/lib/asset-explorer/: asset-map.ts  generate.cjs
www/src/lib/brp/: index.ts  request.ts  response.ts
www/src/lib/components/: Actions.svelte  BasicTooltip.svelte  ComponentSelector.svelte  Console.svelte  Editor.svelte  Inspector.svelte  InspectorValue.svelte  Sidebar.svelte  console.ts  editor.ts
www/src/lib/components/inspector/: Inspector.svelte  InspectorComponentList.svelte  InspectorEntityList.svelte  InspectorValue.svelte
www/src/lib/components/ui/accordion/: accordion-content.svelte  accordion-item.svelte  accordion-trigger.svelte  index.ts
www/src/lib/components/ui/button/: button.svelte  index.ts
www/src/lib/components/ui/card/: card-content.svelte  card-description.svelte  card-footer.svelte  card-header.svelte  card-title.svelte  card.svelte  index.ts
www/src/lib/components/ui/checkbox/: checkbox.svelte  index.ts
www/src/lib/components/ui/command/: command-dialog.svelte  command-empty.svelte  command-group.svelte  command-input.svelte  command-item.svelte  command-list.svelte  command-separator.svelte  command-shortcut.svelte  command.svelte  index.ts
www/src/lib/components/ui/dialog/: dialog-content.svelte  dialog-description.svelte  dialog-footer.svelte  dialog-header.svelte  dialog-overlay.svelte  dialog-portal.svelte  dialog-title.svelte  index.ts
www/src/lib/components/ui/input/: index.ts  input.svelte
www/src/lib/components/ui/label/: index.ts  label.svelte
www/src/lib/components/ui/popover/: index.ts  popover-content.svelte
www/src/lib/components/ui/resizable/: index.ts  resizable-handle.svelte  resizable-pane-group.svelte
www/src/lib/components/ui/scroll-area/: index.ts  scroll-area-scrollbar.svelte  scroll-area.svelte
www/src/lib/components/ui/select/: index.ts  select-content.svelte  select-item.svelte  select-label.svelte  select-separator.svelte  select-trigger.svelte
www/src/lib/components/ui/separator/: index.ts  separator.svelte
www/src/lib/components/ui/sonner/: sonner.svelte
www/src/lib/components/ui/table/: index.ts  table-body.svelte  table-caption.svelte  table-cell.svelte  table-footer.svelte  table-head.svelte  table-header.svelte  table-row.svelte  table.svelte
www/src/lib/components/ui/tooltip/: index.ts  tooltip-content.svelte
www/src/lib/examples/: 0.10.examples.ts  0.11.examples.ts  0.12.examples.ts  0.13.examples.ts  0.14.examples.ts  0.15.examples.ts  0.16.examples.ts  generate.cjs
www/src/routes/: +layout.svelte  +page.svelte
www/src/routes/api/[bevyVersion]/crates/: +server.ts
www/src/routes/api/examples-main/: +server.ts
www/src/routes/api/share/: +server.ts
www/src/routes/challenges/[slug]/: +page.svelte
www/src/routes/playground/: +page.server.ts  +page.svelte  About.svelte  Actions.svelte  AssetExplorer.svelte  Console.svelte  CrateList.svelte  Examples.svelte  Settings.svelte  Sidebar.svelte
(+123 files in other folders)
