[package]
name = "bevy_compile_api"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.12", features = ["attributes"] }
chrono = "0.4"
fastmurmur3 = "0.2"
fastrand = "2.0"
fern = { version = "0.6", features = ["date-based"] }
log = "0.4"
rust_minify = "0.1"
serde = { version = "1.0", features = ["derive"] }
tide = { version = "0.16", default-features = false, features = ["async-h1", "h1-server"] }
tide-compress = { version = "0.11", default-features = false, features = ["gzip"] }
tide-rustls = "0.3"

[features]
dev-mode = []
