[package]
name = "bevy_compile_api"
version = "0.1.0"
edition = "2021"

[dependencies]
fastmurmur3 = "0.2"
fastrand = "2.0"
rust_minify = "0.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "fs", "tracing", "process"] }
tracing = "0.1"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3"
warp = { version = "0.3", features = ["tls", "compression"] }

[features]
dev-mode = []
