[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
fastmurmur3 = "0.2.0"
rust_minify = "0.1"
worker = "0.0.18"

[dependencies.web-sys]
version = "0.3.45"
features = [
    "Headers",
    "Request",
    "RequestInit",
    "Response",
    "ServiceWorkerGlobalScope",
    "Blob",
]

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"
