[package]
name = "compile_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
fastrand = "2.0"
fern = { version = "0.6", features = ["date-based"] }
log = "0.4"
rouille = "3.6"
scopeguard = "1.2"
serde = { version = "1.0", features = ["derive"] }
