[package]
name = "extra_app_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_app = { git = "https://github.com/LiamGallagher737/bevy", branch = "lenient-brp-responses" }
bevy_ecs = { git = "https://github.com/LiamGallagher737/bevy", branch = "lenient-brp-responses" }
bevy_log = { git = "https://github.com/LiamGallagher737/bevy", branch = "lenient-brp-responses" }
bevy_remote = { git = "https://github.com/LiamGallagher737/bevy", branch = "lenient-brp-responses" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
async-channel = "2"
