[package]
name = "compile_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json"] }
derive_more = { version = "1.0.0", features = ["display"] }
fastrand = "2.1.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "net", "fs", "process"] }
tower-http = { version = "0.6.1", features = ["compression-gzip", "cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

