[package]
name = "compile_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json"] }
fastrand = "2.1.1"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "net", "fs", "process", "io-util"] }
tower-http = { version = "0.6.1", features = ["compression-gzip", "cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
shared = { path = "../shared", features = ["server"] }

