[package]
name = "www"
version = "0.1.0"
authors = ["Liam Gallagher <liam@liamgallagher.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
dioxus = { version = "0.5", features = ["fullstack", "router"] }
tailwind_fuse = { version = "0.3.1", features = ["variant"] }
dioxus-logger = "0.5.1"
web-sys = { version = "0.3.70", features = ["Blob", "BlobPropertyBag", "Document", "Element"] }
wasm-bindgen = "0.2.93"
reqwest = { version = "0.12.8", features = ["json"] }
shared = { version = "0.1.0", path = "../shared", features = ["website"] }
wasm-bindgen-futures = "0.4.43"
js-sys = "0.3.70"
gloo-file = "0.3.0"
monaco = "0.5.0"

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
