[package]
name = "check_crate_updates"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
cargo_toml = "0.20.3"
semver = "1.0.23"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
table-extract = "0.2.3"
ureq = { version = "2.10.0", features = ["json"] }
