[package]
name = "check_crate_updates"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
cached = "0.52.0"
semver = "1.0.23"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
table-extract = "0.2.3"
toml_edit = "0.22.15"
ureq = { version = "2.10.0", features = ["json"] }
